Fixed whitespace issue in portfolio section

--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -39,7 +39,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0;
+  margin-top: 18vh;
 }
 
 .portfolio-img {
@@ -123,6 +123,10 @@
 }
 
 @media (min-width: 576px) {
+  .portfolio-img-title {
+    margin-top: 5vh;
+  }
+
   .portfolio-img-title_heading {
     font-size: 1.5rem;
     letter-spacing: 2.5px;
